--- a/wms-frontend/.gitignore
+++ b/wms-frontend/.gitignore
@@ -1,24 +1,36 @@
+# Node modules
+node_modules/
+
+# Build output
+/dist
+/dist-ssr
+/*.local
+
+# Local env files
+.env
+.env.*.local
+
+# Editor settings
+.vscode/
+.idea/
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+pnpm-error.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# System files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Local coverage files
+coverage/
+
+# Optional: Mac trash
+.Trashes
+
+# Optional: Vercel local backups
+.now.sh/
+.vercel/
