--- a/wms-frontend/package.json
+++ b/wms-frontend/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
+    "shepherd.js": "^14.5.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
