--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "openai": "^6.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
