--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
+    "morgan": "^1.10.1",
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
