--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
